--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/paper": "^0.11.9",
     "clean-webpack-plugin": "^2.0.0",
     "copy-webpack-plugin": "^5.0.0",
+    "fork-ts-checker-webpack-plugin": "^1.0.0",
     "handlebars": "^4.1.0",
     "handlebars-loader": "^1.7.1",
     "html-webpack-plugin": "^3.2.0",
