Update tsconfig to allow easy node imports

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
     "compilerOptions": {
         "noImplicitAny": true,
+        "moduleResolution": "node",
         "module": "amd",
         "target": "es5"
     }
